# iot-backend

./: .gitignore  pyproject.toml
models/: rf_model.joblib
src/: main.py
